@@ -10,7 +10,8 @@ Version 0.3.2
   chart images. It is recommended, but not required, to use the launcher.
   The patcher program will still update JSHManager.jar correctly.
 - GH5 support. Also added GHWT for PC for completeness.
-
+- Fixed bug that sometimes set star rating to blank when quick-editing a
+  score via the song list and later editing/saving it via the editor.
 
 Version 0.3.1
 -------------
